# nasa-virtual-zarr-survey

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
api/attempt/: index.html
api/cubability/: index.html
api/discover/: index.html
api/inspect/: index.html
api/report/: index.html
api/repro/: index.html
api/sample/: index.html
api/taxonomy/: index.html
config/: collection_overrides.toml
contributing/: index.html
design/architecture/: index.html
design/taxonomy/: index.html
docs/: contributing.md  glossary.md  index.md
docs/api/: attempt.md  cubability.md  db_session.md  discover.md  feature_introductions.md  history.md  inspect.md  investigate.md  lock_sample.md  overrides.md  prefetch.md  preview_manifest.md  probe.md  render.md  report.md  repro.md  run.md  sample.md  snapshot.md  taxonomy.md
docs/design/: architecture.md  taxonomy.md
docs/results/: history.md  summary.json
glossary/: index.html
results/: index.html  summary.json
results/figures/: by_daac.html  by_format.html  collections.html  funnel.html  sankey.html  taxonomy_dataset.html  taxonomy_datatree.html  taxonomy_parse.html
search/: search_index.json
src/nasa_virtual_zarr_survey/: __init__.py  __main__.py  _defaults.py  attempt.py  auth.py  cache.py  cubability.py  db.py  db_session.py  discover.py  figures.py  formats.py  history.py  inspect.py  lock_sample.py  overrides.py  popularity.py  prefetch.py  preview_manifest.py  probe.py  processing_level.py  providers.py  report.py  repro.py  sample.py  script_template.py  snapshot.py  summary_io.py  taxonomy.py  types.py
src/nasa_virtual_zarr_survey/cli/: __init__.py  _options.py  _probe_hint.py  _summaries.py
src/nasa_virtual_zarr_survey/report/: __init__.py  _aggregate.py  _ingest.py  _markdown.py  _orchestrate.py
src/vzc/: __init__.py  __main__.py  _config.py  snapshot.py
src/vzc/cli/: __init__.py  _listings.py  _options.py  _summaries.py
src/vzc/cmr/: __init__.py  _discover.py  _opendap.py  _providers.py  _sample.py
src/vzc/core/: __init__.py  formats.py  processing_level.py  taxonomy.py  types.py
src/vzc/pipeline/: __init__.py  _attempt.py  _cubability.py  _inspect.py  _investigate.py  _overrides.py  _prefetch.py  _probe.py  _scripts.py  _stores.py
src/vzc/render/: __init__.py  _aggregate.py  _figures.py  _history.py  _intros.py  _markdown.py  _orchestrate.py
src/vzc/state/: __init__.py  _digest.py  _io.py  _results.py
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_attempt.py  test_auth.py  test_cache.py  test_cache_integration.py  test_cli_helpers.py  test_cubability.py  test_db.py  test_db_session.py  test_discover.py  test_feature_introductions.py  test_figures.py  test_formats.py  test_history.py  test_inspect.py  test_lock_sample.py  test_main.py  test_opendap.py  test_overrides.py  test_pilot_smoke.py  test_popularity.py  test_prefetch.py  test_preview_manifest.py  test_probe.py  test_processing_level.py  test_providers.py  test_report.py  test_repro.py  test_sample.py  test_script_template.py  test_snapshot.py  test_summary_io.py  test_taxonomy.py
(+20 files in other folders)
