[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "nasa-virtual-zarr-survey"
dynamic = ["version"]
description = "Survey cloud-hosted NASA CMR collections for VirtualiZarr compatibility"
readme = "README.md"
authors = [
    { name = "Max Jones", email = "14077947+maxrjones@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "earthaccess>=0.14",
    "virtualizarr[remote,hdf,zarr,netcdf3,fits,icechunk,kerchunk,tiff]>=1.3",
    "obstore>=0.5",
    "obspec-utils>=0.2",
    "duckdb>=1.1",
    "pyarrow>=17",
    "click>=8.1",
]

[project.scripts]
nasa-virtual-zarr-survey = "nasa_virtual_zarr_survey.__main__:cli"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-mock>=3.12",
    "pytest-cov>=5",
    "ruff>=0.7",
    "mypy>=1.11",
    "types-requests>=2.31",
    "pyarrow-stubs>=17",
]
docs = [
    "mkdocs-material[imaging]>=9.6.14",
    "mkdocs>=1.6.1",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.10",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/nasa_virtual_zarr_survey"]

[tool.pytest.ini_options]
markers = [
    "integration: requires EDL credentials and network",
]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"

[tool.codespell]
ignore-words-list = "strat"
